# market-data-engine

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md
scripts/: build.sh
src/: main.cpp
src/config/: Settings.cpp  Settings.hpp
src/domain/aggregates/: OrderBook.cpp  OrderBook.hpp
src/domain/events/: BookDelta.hpp  BookSnapshot.hpp  OrderBookEvent.hpp  PriceLevelDelta.hpp  TickSizeChange.hpp  TradeEvent.hpp
src/domain/value_objects/: MarketAsset.cpp  MarketAsset.hpp  Price.cpp  Price.hpp  PriceLevel.cpp  PriceLevel.hpp  Quantity.cpp  Quantity.hpp  Side.hpp  Timestamp.cpp  Timestamp.hpp
src/infrastructure/: MarketDiscovery.cpp  MarketDiscovery.hpp  PolymarketClient.cpp  PolymarketClient.hpp  PolymarketMessageParser.cpp  PolymarketMessageParser.hpp
src/repositories/: IOrderBookRepository.hpp  InMemoryOrderBookRepository.hpp
src/repositories/parquet/: ParquetOrderBookRepository.cpp  ParquetOrderBookRepository.hpp  ParquetSchemas.cpp  ParquetSchemas.hpp
src/services/: IMarketDataFeed.hpp  OrderBookService.cpp  OrderBookService.hpp
tests/: CMakeLists.txt
tests/config/: SettingsTest.cpp
tests/domain/aggregates/: OrderBookTest.cpp
tests/domain/events/: BookDeltaTest.cpp  BookSnapshotTest.cpp  SideTest.cpp  TickSizeChangeTest.cpp  TradeEventTest.cpp
tests/domain/value_objects/: MarketAssetTest.cpp  PriceLevelTest.cpp  PriceTest.cpp  QuantityTest.cpp  TimestampTest.cpp
tests/infrastructure/: MarketDiscoveryTest.cpp  PolymarketMessageParserTest.cpp
tests/infrastructure/parquet/: ParquetIntegrationTest.cpp  ParquetSchemasTest.cpp  ParquetSerializationTest.cpp
tests/services/: OrderBookServiceTest.cpp
tools/: ws_listener.cpp
